<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".createplayer.CreatePlayerDialogFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:gravity="center"
        android:minWidth="200dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_subtract"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:enabled="@{viewmodel.buttonsEnabled}"
            android:onClick="@{() -> viewmodel.subtract()}"
            android:text="@string/button_substract"
            android:tint="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/button_add"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_score" />

        <Button
            android:id="@+id/button_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:enabled="@{viewmodel.buttonsEnabled}"
            android:onClick="@{() -> viewmodel.add()}"
            android:text="@string/button_add"
            android:tint="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/button_subtract"
            app:layout_constraintTop_toBottomOf="@id/layout_score" />

        <TextView
            android:id="@+id/textview_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin"
            android:text="@{viewmodel.name}"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Player One" />

        <TextView
            android:id="@+id/textview_current_score"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/margin"
            android:paddingEnd="@dimen/margin"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="end"
            android:paddingBottom="@dimen/margin"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@{viewmodel.score}"
            app:layout_constraintTop_toBottomOf="@id/actions"
            tools:text="12" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/actions"
            android:layout_width="0dp"
            android:layout_height="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textview_name" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_score"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textview_current_score">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/form_points"
                android:inputType="number"
                android:text="@={viewmodel.pointsToChange}" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <data>

        <variable
            name="viewmodel"
            type="com.mhp.scoreboard.score.ScoreViewModel" />
    </data>

</layout>
